<resources>
    <string name="app_name">Conpeto</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">477026109483594</string>
    <string name="fb_login_protocol_scheme">fb477026109483594</string>
    <string name="create_a_group">Create a Group</string>
    <string name="search_for_groups">Search for Groups</string>
    <string name="view_my_groups">View my groups</string>
    <string name="title_activity_create_group">CreateGroup</string>
    <string name="submit">submit</string>
    <string name="please_sepcify_information_of_group_you_want_to_create">Please Sepcify information of group you want to create</string>
    <string name="group_activity_sports">Group Activity(Sports)</string>
    <string name="group_name">Group Name</string>
    <string name="cancel">Cancel</string>
    <string name="create_your_group">Create your group</string>
    <string name="title_activity_view_group">ViewGroup</string>
    <string name="go_back">Go back</string>
    <string name="below_is_a_list_of_groups_joined">below_is_a_list_of_groups_joined</string>
    <string name="title_activity_join_group">JoinGroup</string>
    <string name="enter_the_name_of_group_you_want_to_join">Enter the name of group you want to join</string>
    <string name="search_for_and_join_a_group">Search for and join a group</string>
    <string name="title_activity_demo_activity">demo_activity</string>
    <string name="title_activity_select_and_self_map">Map</string>
    <string name="title_activity_show_group_info">ShowGroupInfo</string>
    <string name="notify_me_when_groups_within_this_range_are_created">Notify me when groups within this range are created</string>
    <string name="log_out">Log Out</string>

    <string name="title_activity_group_list">GroupList</string>

    <string name="delete_group">DELETE GROUP</string>
    <string name="title_activity_create_same_group">CreateSameGroup</string>
    <string name="default_notification_channel_id">default</string>
    <string name="join_group">JOIN GROUP</string>
    <string name="view_map">View Map</string>

</resources>
